# Mayor-Blings

./: .gitignore  README.md  pyproject.toml  requirements.txt
MayorBlings/: manage.py  requirements.txt
MayorBlings/Admin/: urls.py  views.py
MayorBlings/Authentication/: models.py  permissions.py  serializers.py  urls.py  views.py
MayorBlings/MayorBlings/: asgi.py  settings.py  urls.py  wsgi.py
MayorBlings/Product/: models.py  serializers.py  urls.py  views.py
